--- a/chapter01.tex
+++ b/chapter01.tex
@@ -3,7 +3,7 @@
 \section{研究背景和意义}
 \subsection{研究背景和意义}
 %
-关于\LaTeX{}以及基于\LaTeX{}写作的好处不再赘述。\LaTeX{}的入门资料推荐文献\parencite{_g}以及文献\parencite{_c}。
+\LaTeX{}以及基于\LaTeX{}写作的好处不再赘述。\LaTeX{}的入门资料推荐文献\parencite{_g}以及文献\parencite{_c}。
 
 这里主要是想推荐一种“学术生态”，即利用各种工具展开科研工作，以达到事半功倍的效果。需要用到以下软件：
 \begin{enumerate}[topsep = 0 pt, itemsep= 0 pt, parsep=0pt, partopsep=0pt, leftmargin=44pt, itemindent=0pt, labelsep=6pt, label=(\arabic*)]
