--- a/scutthesis.tex
+++ b/scutthesis.tex
@@ -47,8 +47,8 @@
 \makeatother
 \begin{document}
 	%%%%%%%%%%%%%草稿封面设置%%%%%%%%%%%%%使用“正式封面”时不需要理会这部分
-	\title{LaTeX模板使用说明}	
-	\author{张镭耀}	
+	\title{LaTeX使用说明}	
+	\author{zly}	
 	\supervisor{指导教师： 教授}	
 	\institute{华南理工大学}	
 	\date{2020年5月20日}
